# socX

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  socX.py
src/socx/: __init__.py  socx.py  socx2.py  util.py
src/socx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: tests.py
tests/test_files/: SOCX_COMBINED_FILE_20260522_154941.csv  assets.csv  assets2.csv
