[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "socx"
version = "2.4.0"  # ← Added .0 for PEP 440 compliance
description = "A set of useful tools for a security operations center"
readme = "README.md"
authors = [
    { name = "Enlace", email = "enlace.aman@gmail.com" }
]
requires-python = ">=3.8"
license = { text = "MIT" }  # ← Recommended: add license
keywords = ["soc", "security", "operations", "automation"]  # ← Helps discoverability

dependencies = [
    "keyring>=25.6.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/yourusername/socx"  # ← Optional but recommended
Repository = "https://github.com/yourusername/socx"
Issues = "https://github.com/yourusername/socx/issues"

[project.scripts]
socx = "socx:main"  # ← CLI entry point